# gitdirector

./: .coverage  .gitignore  AGENTS.md  BRAINSTORM.md  DEV.md  HOMEBREW.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: gitdirector.rb
src/gitdirector/: cli.py  config.py  exceptions.py  info.py  manager.py  repo.py  storage.py  ui.py  ui_theme.py  version_check.py
src/gitdirector/commands/: __init__.py  add.py  autoclean.py  cd.py  help.py  info.py  link.py  listt.py  pull.py  remove.py  status.py  tui.py  unlink.py
src/gitdirector/commands/tui/: __init__.py  app.py  app_panels.py  app_repos.py  app_sessions.py  app_ui.py  constants.py  panel_view.py  panels.py  screens.py  terminal_widget.py
src/gitdirector/integrations/: tmux.py
src/gitdirector/integrations/tmux/: __init__.py  core.py  monitor.py  panels.py
tests/: conftest.py  test_autoclean.py  test_cli.py  test_config.py  test_extras.py  test_info.py  test_manager.py  test_repo.py  test_tmux.py  test_tui.py  test_version_check.py
tests/tmux/: __init__.py  _shared.py  test_config.py  test_integration.py  test_layout.py  test_monitor.py  test_regressions.py  test_sessions.py
tests/tui/: conftest.py  test_console.py  test_helpers.py  test_panels.py  test_screens.py  test_search.py  test_sessions.py  test_sort.py
