[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "gitdirector"
version = "1.4.0"
description = "A terminal based control plane for developers working across multiple repositories. Launch multiple AI coding agents, multiple tmux sessions and track changes across all your repos in one place."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Anito Anto", email = "49053859+anitoanto@users.noreply.github.com" }
]
maintainers = [
    { name = "Anito Anto", email = "49053859+anitoanto@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = ["git", "repository", "manager", "cli", "synchronization", "batch"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=12.0",
    "textual>=8.2.1",
    "tiktoken>=0.5.0",
    "pyte>=0.8.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/anitoanto/gitdirector"
Repository = "https://github.com/anitoanto/gitdirector.git"
Issues = "https://github.com/anitoanto/gitdirector/issues"
Documentation = "https://github.com/anitoanto/gitdirector/blob/main/README.md"

[project.scripts]
gitdirector = "gitdirector.cli:main"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "black>=23.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --cov=src/gitdirector --cov-report=term-missing"
asyncio_mode = "auto"
